--- a/app/src/main/res/layout/dialog_detail_video.xml
+++ b/app/src/main/res/layout/dialog_detail_video.xml
@@ -104,9 +104,11 @@
 
         <ImageView
             android:id="@+id/dialog_video_poster"
-            android:layout_width="50dp"
+            android:layout_width="wrap_content"
+            android:maxWidth="75dp"
             android:layout_height="75dp"
             android:layout_marginLeft="8dp"
+            android:adjustViewBounds="true"
             android:visibility="gone"
             app:srcCompat="@drawable/ic_download"
             tools:srcCompat="@drawable/simpsons_movie_poster"
