--- a/app/src/main/res/layout/list_item_url_parser.xml
+++ b/app/src/main/res/layout/list_item_url_parser.xml
@@ -65,6 +65,32 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/listItem_urlParser_thumbnailCode_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="gone"
+                tools:visibility="visible">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="8dp"
+                    android:text="Thumbnail:"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/listItem_urlParser_thumbnailCode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ellipsize="marquee"
+                    android:singleLine="true"
+                    tools:text="Text..." />
+
+            </LinearLayout>
+
         </LinearLayout>
 
         <ImageView
