--- a/app/src/main/res/layout/dialog_edit_or_add_url_parser.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_url_parser.xml
@@ -78,4 +78,21 @@
         android:visibility="gone"
         tools:visibility="visible" />
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/dialog_editOrAdd_urlParser_thumbnailCode_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:errorEnabled="true">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/dialog_editOrAdd_urlParser_thumbnailCode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Thumbnail-Code"
+            android:singleLine="false"
+            tools:text="das\nist\nein\ntest"
+            android:inputType="textMultiLine" />
+    </com.google.android.material.textfield.TextInputLayout>
+
 </LinearLayout>
