Thumbnail kann aus einer Liste der auf der Webseite eingebetteten Bilder ausgewählt werden

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="colorDayNightContent">#757575</color>
     <color name="colorBackground">#fafafa</color>
     <color name="colorBackgroundLight">#ffffff</color>
+    <color name="colorMenuText">#757575</color>
 </resources>
