--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -24,27 +24,27 @@
                 android:id="@+id/collapsingToolbarLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:theme="@style/ToolBarStyle"
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleGravity="top"
                 app:expandedTitleMarginStart="50dp"
                 app:expandedTitleMarginTop="10dp"
-                android:theme="@style/ToolBarStyle"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
                 <TextView
                     android:id="@+id/elementCount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
                     android:layout_marginTop="120dp"
                     android:layout_marginBottom="210dp"
                     android:gravity="center_vertical"
                     android:text="Test"
-                    android:layout_gravity="bottom"
                     android:textAlignment="center"
                     android:textColor="#FFFFFF"
                     android:textSize="36sp"
                     app:layout_collapseMode="parallax"
-                    app:layout_collapseParallaxMultiplier="0.4"/>
+                    app:layout_collapseParallaxMultiplier="0.4" />
 
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -60,6 +60,7 @@
 
 
                 <LinearLayout
+                    android:id="@+id/search_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
@@ -74,9 +75,9 @@
                         android:focusable="auto"
                         android:iconifiedByDefault="false"
                         android:inputType="textCapSentences"
-                        android:theme="@style/AppTheme"
                         android:queryBackground="@android:color/transparent"
                         android:queryHint="Filter eingeben ('&amp;' als 'und'; '|' als 'oder')"
+                        android:theme="@style/AppTheme"
                         app:layout_scrollFlags="scroll|enterAlways|snap" />
 
                     <View
@@ -104,7 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="130dp"
+            android:layout_marginTop="150dp"
             android:text="Kein Eintrag"
             android:textStyle="italic" />
 
