--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorDayNightContent">#B3B3B3</color>
     <color name="colorBackground">#303030</color>
     <color name="colorBackgroundLight">#424242</color>
+    <color name="colorMenuText">#FFFFFF</color>
 </resources>
