--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,7 +62,7 @@
     </style>
 
     <style name="TitleTextStyle" parent="AppTheme">
-        <item name="android:textColor">@color/colorText</item>
+        <item name="android:textColor">@color/colorMenuText</item>
     </style>
 
 </resources>
