Einhandmodus zu Ende hinzugefügt

--- a/app/src/main/res/layout/activity_catigorys.xml
+++ b/app/src/main/res/layout/activity_catigorys.xml
@@ -1,53 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".Activities.Content.VideoActivity">
+    android:layout_height="match_parent">
 
-    <SearchView
-        android:id="@+id/catigorys_search"
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:focusable="auto"
-        android:iconifiedByDefault="false"
-        android:inputType="textCapSentences"
-        android:queryBackground="@android:color/transparent"
-        android:queryHint="ändern ******"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:background="@drawable/header_gradiant"
+        app:expanded="false"
+        tools:expanded="true">
 
-    </SearchView>
-
-    <View
-        android:id="@+id/catigorys_divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@id/catigorys_search" />
-
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/catigorys_recycler"
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbarLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingHorizontal="8dp" />
+            android:theme="@style/ToolBarStyle"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleGravity="top"
+            app:expandedTitleMarginStart="55dp"
+            app:expandedTitleMarginTop="10dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
-        <TextView
-            android:id="@+id/no_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:text="Kein Eintrag"
-            android:textStyle="italic" />
-    </FrameLayout>
+            <TextView
+                android:id="@+id/elementCount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:minHeight="306dp"
+                android:layout_marginBottom="73dp"
+                android:gravity="center_vertical"
+                android:text="Test"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textSize="36sp"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.3" />
 
-</LinearLayout>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="49dp"
+                app:layout_collapseMode="pin"
+                app:menu="@menu/task_bar_show"
+                app:navigationIcon="@drawable/ic_arrow_back_white"
+                app:popupTheme="@style/TitleTextStyle"
+                app:title="..." />
+
+
+            <LinearLayout
+                android:id="@+id/search_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:background="@color/colorBackground"
+                android:orientation="vertical"
+                app:layout_scrollFlags="scroll|enterAlways|snap">
+
+                <SearchView
+                    android:id="@+id/search"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusable="auto"
+                    android:iconifiedByDefault="false"
+                    android:inputType="textCapSentences"
+                    android:queryBackground="@android:color/transparent"
+                    android:queryHint="Filter eingeben ('&amp;' als 'und'; '|' als 'oder')"
+                    android:theme="@style/AppTheme"
+                    app:layout_scrollFlags="scroll|enterAlways|snap" />
+
+                <View
+                    android:id="@+id/divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="?android:attr/listDivider"
+                    app:layout_scrollFlags="scroll|enterAlways" />
+            </LinearLayout>
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+
+    <TextView
+        android:id="@+id/no_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="150dp"
+        android:text="Kein Eintrag"
+        android:textStyle="italic" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
