--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/header_gradiant"
             app:expanded="false"
-            tools:expanded="true">
+            tools:expanded="false">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsingToolbarLayout"
@@ -101,17 +101,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/main_offline"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|end"
-                    android:layout_margin="16dp"
-                    android:backgroundTint="@color/colorAccent"
-                    android:clickable="true"
-                    android:visibility="gone"
-                    app:srcCompat="@drawable/ic_offline"
-                    tools:visibility="visible" />
             </FrameLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
@@ -124,4 +113,18 @@
         android:background="@color/colorBackground"
         android:clipChildren="false"
         app:elevation="0dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/main_offline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="72dp"
+        android:backgroundTint="@color/colorAccent"
+        android:clickable="true"
+        android:visibility="gone"
+        app:srcCompat="@drawable/ic_offline"
+        tools:visibility="visible" />
 </RelativeLayout>
