--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -36,9 +36,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
-                    android:layout_marginBottom="73dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginBottom="105dp"
                     android:gravity="center_vertical"
-                    android:minHeight="306dp"
+                    android:minHeight="242dp"
                     android:text="Test"
                     android:textAlignment="center"
                     android:textColor="#FFFFFF"
