--- a/app/src/main/res/layout/dialog_custom.xml
+++ b/app/src/main/res/layout/dialog_custom.xml
@@ -132,7 +132,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:fillViewport="true"
+            android:fillViewport="false"
+            android:requiresFadingEdge="vertical"
             android:visibility="gone"
             tools:visibility="visible" />
 
