--- a/app/src/main/res/layout/dialog_edit_or_add_collection.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_collection.xml
@@ -80,7 +80,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/dialog_editOrAddCollection_actor"
+                android:id="@+id/dialog_editOrAddCollection_films"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -94,7 +94,7 @@
                 tools:text="Darsteller1, Darsteller 2, Darsteller 3, Darsteller 4" />
 
             <ImageView
-                android:id="@+id/dialog_editOrAddCollection_editActor"
+                android:id="@+id/dialog_editOrAddCollection_editFilms"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
@@ -103,7 +103,30 @@
                 app:srcCompat="@android:drawable/ic_menu_edit" />
         </LinearLayout>
 
-<!--        <LinearLayout-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/dialog_editOrAddCollection_autoImportVideos"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Videos Importieren" />
+
+            <Button
+                android:id="@+id/dialog_editOrAddCollection_autoImportToCollection"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Videos Automatisch hinzufügen" />
+
+        </LinearLayout>
+
+        <!--        <LinearLayout-->
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="wrap_content"-->
 <!--            android:gravity="center_vertical"-->
